[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/portalhole.png" type="Texture" id=1]
[ext_resource path="res://Actors/PortalHole/PortalHole.gd" type="Script" id=2]

[sub_resource type="SpatialMaterial" id=1]
flags_transparent = true
flags_unshaded = true
albedo_texture = ExtResource( 1 )

[sub_resource type="PlaneMesh" id=2]
material = SubResource( 1 )

[sub_resource type="PlaneMesh" id=3]
material = SubResource( 1 )
flip_faces = true

[node name="PortalHole" type="Spatial"]
script = ExtResource( 2 )

[node name="Hole1" type="MeshInstance" parent="."]
transform = Transform( 1.25, 0, 0, 0, 1.25, 0, 0, 0, 1.25, 0, 0, 0 )
mesh = SubResource( 2 )
material/0 = null

[node name="Hole2" type="MeshInstance" parent="."]
transform = Transform( -1.3, -1.1365e-07, 0, 1.1365e-07, -1.3, 0, 0, 0, 1.3, 0, -0.0386171, 0 )
mesh = SubResource( 3 )
material/0 = null

[node name="Tween" type="Tween" parent="."]

[connection signal="tween_step" from="Tween" to="." method="_on_Tween_tween_step"]
